src/objects/ProtocolViolationDetail__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRFId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRFId</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Protocol Violation Details</relationshipLabel>
        <relationshipName>Protocol_Violation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfProtocolViolation__c</fullName>
        <label>Date of Protocol Violation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eligibility_criteria_exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligibility criteria exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_of_ineligeligibleible_patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollment of ineligeligibleible patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incorrect_therapy_given_to_patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incorrect therapy given to patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_IRB_Notified__c</fullName>
        <description>Was the local IRB notified?</description>
        <inlineHelpText>Was the local IRB notified?</inlineHelpText>
        <label>Local IRB Notified</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medication_non_complicance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medication non-compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Narrative_description__c</fullName>
        <description>Narrative description of potocol violation.</description>
        <inlineHelpText>Narrative description of potocol violation.</inlineHelpText>
        <label>Narrative description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_study_procedure_required_by_protocol__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On-study procedure required by protocol not completed.</description>
        <inlineHelpText>On-study procedure required by protocol not completed.</inlineHelpText>
        <label>On-study procedure required by protocol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>ProtocolViolationDetail__c</referenceTo>
        <relationshipLabel>Protocol Violation Details</relationshipLabel>
        <relationshipName>Protocol_Violation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Action_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Action Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Action__c</fullName>
        <label>Other Action Taken</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type_of_Violation__c</fullName>
        <label>Other (Type of Violation)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Violation_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other_Violation_Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Remains_on_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Patient Remains on Study but data analysis will be modified.</description>
        <inlineHelpText>Patient Remains on Study but data analysis will be modified.</inlineHelpText>
        <label>Patient Remains on Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>Protocol Violation Details</relationshipLabel>
        <relationshipName>Protocol_Violation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_became_pregnant_prior_to_surgery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient became pregnant prior to surgery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_withdrawn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pg_Status__c</fullName>
        <label>Pg_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screening_and_on_study_test_lab_done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Screening and on-study test/lab done outside the protocol required time.</description>
        <inlineHelpText>Screening and on-study test/lab done outside the protocol required time.</inlineHelpText>
        <label>Screening and on-study test/lab done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Screening_procedure_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Screening procedure required by protocol not done.</description>
        <inlineHelpText>Screening procedure required by protocol not done.</inlineHelpText>
        <label>Screening procedure required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Protocol_Violation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Protocol Violation CRF</relationshipLabel>
        <relationshipName>Protocol_Violation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_non_complicance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit non-complicance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_ProtocolViolation_Id__c</fullName>
        <label>pg_ProtocolViolation_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Protocol Violation Detail</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protocol Violation Details</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>DateOfProtocolViolation_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>DateOfProtocolViolation__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>DateOfProtocolViolation__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Action_Taken</fullName>
        <active>false</active>
        <errorConditionFormula>Patient_Remains_on_Study__c = false &amp;&amp;  Patient_withdrawn__c = false  &amp;&amp;  (ISNULL(Other_Action__c ) ||  ISBLANK(Other_Action__c) )</errorConditionFormula>
        <errorMessage>Please select at-least one Action taken</errorMessage>
    </validationRules>
</CustomObject>